--- a/jupyter/numpy4_fileIO&LinearAlgebra.ipynb
+++ b/jupyter/numpy4_fileIO&LinearAlgebra.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### np.save and np.load are the two workhorse functions for efficiently saving and load‐ing array data on disk."
+    "### np.save and np.load "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,26 +66,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "numpy.lib.npyio.NpzFile"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(arch)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
    "outputs": [
@@ -106,12 +86,293 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### linear Algebra"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.savez_compressed('C://Users//15873//Desktop//arrays_compressed.npz', a=arr, b=brr)"
+    "x = np.array([[1.,2.,3.], [4.,5.,6.]])\n",
+    "y = np.array([[6.,23.], [-1, 7], [8, 9]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 2., 3.],\n",
+       "       [4., 5., 6.]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 6., 23.],\n",
+       "       [-1.,  7.],\n",
+       "       [ 8.,  9.]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 0 ns\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 28.,  64.],\n",
+       "       [ 67., 181.]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%time x.dot(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 0 ns\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 28.,  64.],\n",
+       "       [ 67., 181.]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%time np.dot(x, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 6., 15.])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x @ np.ones(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from numpy.linalg import inv, qr, det"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 61, -19,  43, -26,  13],\n",
+       "       [-19,  19, -11,   2,  12],\n",
+       "       [ 43, -11,  71,   7,  17],\n",
+       "       [-26,   2,   7, 250, -79],\n",
+       "       [ 13,  12,  17, -79,  46]])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = np.random.randn(5,5)*5\n",
+    "mat = x.T.dot(x)\n",
+    "mat = mat.astype(np.int32)\n",
+    "mat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.06888456,  0.18861824,  0.02910708, -0.0443021 , -0.15551314],\n",
+       "       [ 0.18861824,  1.06760878,  0.31350073, -0.30431933, -0.97030613],\n",
+       "       [ 0.02910708,  0.31350073,  0.13025701, -0.10230074, -0.31383757],\n",
+       "       [-0.0443021 , -0.30431933, -0.10230074,  0.09989271,  0.30126948],\n",
+       "       [-0.15551314, -0.97030613, -0.31383757,  0.30126948,  0.95219288]])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inv(mat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 0, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 0, 1, 0, 0],\n",
+       "       [0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0]], dtype=int64)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mat.dot(inv(mat)).astype(np.int64)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ -82.31646251,   22.94802209,  -71.9661635 ,  107.51190868,\n",
+       "         -47.96124469],\n",
+       "       [   0.        ,  -21.54967012,   -2.89939983,  114.16349493,\n",
+       "         -59.79746769],\n",
+       "       [   0.        ,    0.        ,  -46.49155613, -168.46554231,\n",
+       "          37.89857108],\n",
+       "       [   0.        ,    0.        ,    0.        , -128.44160919,\n",
+       "          40.57333014],\n",
+       "       [   0.        ,    0.        ,    0.        ,    0.        ,\n",
+       "           0.69646143]])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q,r = qr(mat)\n",
+    "r"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.657383675390842"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.trace()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1185.0606014571028"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "det(x)"
    ]
   },
   {
