add some files of pandas

--- a/jupyter/pandas1_dataStrructures.ipynb
+++ b/jupyter/pandas1_dataStrructures.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,165 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "obj = Series([4,7,5,3])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0    4\n",
-       "1    7\n",
-       "2    5\n",
-       "3    3\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "obj"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([4, 7, 5, 3], dtype=int64)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "obj.values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "RangeIndex(start=0, stop=4, step=1)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "obj.index"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1    7\n",
-       "3    3\n",
-       "2    5\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "obj[[1,3,2]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1    7\n",
-       "2    5\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "obj[obj>4]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "7 in obj"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "1 in obj"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +35,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {
     "scrolled": false
    },
@@ -230,7 +72,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +99,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +212,7 @@
        "5  Nevada  2004  3.2"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +296,7 @@
        "4  Nevada  2001  2.9"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +387,7 @@
        "5  2004  3.2  Nevada"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +413,7 @@
        "Name: stata, dtype: object"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -582,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +439,7 @@
        "Name: year, dtype: int64"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +462,7 @@
        "Name: 3, dtype: object"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -718,7 +560,7 @@
        "5  Nevada  2004  3.2     5"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -731,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -758,6 +600,7 @@
        "      <th>stata</th>\n",
        "      <th>year</th>\n",
        "      <th>pop</th>\n",
+       "      <th>debt</th>\n",
        "      <th>extern</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -767,6 +610,7 @@
        "      <td>Ohio</td>\n",
        "      <td>2000</td>\n",
        "      <td>1.5</td>\n",
+       "      <td>0</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -774,6 +618,7 @@
        "      <td>ohio</td>\n",
        "      <td>2001</td>\n",
        "      <td>1.7</td>\n",
+       "      <td>1</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -781,6 +626,7 @@
        "      <td>ohio</td>\n",
        "      <td>2002</td>\n",
        "      <td>3.6</td>\n",
+       "      <td>2</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -788,6 +634,7 @@
        "      <td>Nevada</td>\n",
        "      <td>2000</td>\n",
        "      <td>2.4</td>\n",
+       "      <td>3</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -795,6 +642,7 @@
        "      <td>Nevada</td>\n",
        "      <td>2001</td>\n",
        "      <td>2.9</td>\n",
+       "      <td>4</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -802,6 +650,7 @@
        "      <td>Nevada</td>\n",
        "      <td>2004</td>\n",
        "      <td>3.2</td>\n",
+       "      <td>5</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -809,16 +658,16 @@
        "</div>"
       ],
       "text/plain": [
-       "    stata  year  pop  extern\n",
-       "0    Ohio  2000  1.5    True\n",
-       "1    ohio  2001  1.7   False\n",
-       "2    ohio  2002  3.6   False\n",
-       "3  Nevada  2000  2.4   False\n",
-       "4  Nevada  2001  2.9   False\n",
-       "5  Nevada  2004  3.2   False"
+       "    stata  year  pop  debt  extern\n",
+       "0    Ohio  2000  1.5     0    True\n",
+       "1    ohio  2001  1.7     1   False\n",
+       "2    ohio  2002  3.6     2   False\n",
+       "3  Nevada  2000  2.4     3   False\n",
+       "4  Nevada  2001  2.9     4   False\n",
+       "5  Nevada  2004  3.2     5   False"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -830,16 +679,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['stata', 'year', 'pop', 'extern'], dtype='object')"
+       "Index(['stata', 'year', 'pop', 'debt', 'extern'], dtype='object')"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -850,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -909,6 +758,15 @@
        "      <td>2.4</td>\n",
        "      <td>2.9</td>\n",
        "      <td>3.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>debt</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>extern</th>\n",
@@ -928,16 +786,42 @@
        "stata   Ohio   ohio   ohio  Nevada  Nevada  Nevada\n",
        "year    2000   2001   2002    2000    2001    2004\n",
        "pop      1.5    1.7    3.6     2.4     2.9     3.2\n",
+       "debt       0      1      2       3       4       5\n",
        "extern  True  False  False   False   False   False"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "frame.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([['Ohio', 2000, 1.5, 0, True],\n",
+       "       ['ohio', 2001, 1.7, 1, False],\n",
+       "       ['ohio', 2002, 3.6, 2, False],\n",
+       "       ['Nevada', 2000, 2.4, 3, False],\n",
+       "       ['Nevada', 2001, 2.9, 4, False],\n",
+       "       ['Nevada', 2004, 3.2, 5, False]], dtype=object)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "frame.values"
    ]
   },
   {
